--- a/etc/test/nico/viewer.html
+++ b/etc/test/nico/viewer.html
@@ -33,7 +33,7 @@
           
           var script = document.createElement("script");
           script.src = address;
-          document.body.appendChild(script);
+          document.querySelector("html").appendChild(script);
         }
       };
     -->
